# geoarrow-cpp-old

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: run-examples.yaml
examples/example-bbox/: example-bbox.cpp
src/geoarrow/: array-view-base.hpp  array-view-geoarrow.hpp  array-view-wkb.hpp  array-view-wkt.hpp  common.hpp  compute-bounds.hpp  compute-builder.hpp  compute-cast-collection.hpp  compute-cast-linestring.hpp  compute-cast-point.hpp  compute-cast-polygon.hpp  compute-cast-wkb.hpp  compute-cast-wkt.hpp  compute-factory.hpp  compute-geoparquet-types.hpp  factory.hpp  geoarrow.cpp  geoarrow.hpp  handler.hpp  index_math.hpp  index_math_test.cc  meta.hpp  schema.hpp  wkb-reader.hpp  wkt-reader.hpp
src/geoarrow/internal/arrow-hpp/: builder-list.hpp  builder-string.hpp  builder-struct.hpp  builder.hpp  common.hpp  schema.hpp
